force-app/main/default/objects/OpptyProds__c/OpptyProds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To store setting to be used for the bulk addition of opportunity product custom component</description>
    <label>Opportunity Products</label>
</CustomObject>