force-app/main/default/objects/OpptyProds__c/fields/Price_Change_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Price_Change_Quantity__c</fullName>
    <description>Quantity to change the incremental color change price</description>
    <label>Price Change Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>