force-app/main/default/objects/OpptyProds__c/fields/PricingData1__c.field-meta.xml
<CustomField>
    <fullName>PricingData1__c</fullName>
    <description>Price addition with number of colors</description>
    <label>PricingData1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>