force-app/main/default/objects/OpptyProds__c/fields/PricingData2__c.field-meta.xml
<CustomField>
    <fullName>PricingData2__c</fullName>
    <description>Price addition with number of color # 2</description>
    <label>PricingData2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>