force-app/main/default/objects/OpptyProds__c/fields/Service_Products__c.field-meta.xml
<CustomField>
    <fullName>Service_Products__c</fullName>
    <label>Service Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>